--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-# theme: jekyll-theme-modernist
-remote_theme: https://github.com/orderedlist/minimal
+theme: minimal
+# remote_theme: https://github.com/orderedlist/minimal
