--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
-theme: minimal
-remote_theme: minimal
+# theme: minimal
+# remote_theme: minimal
+
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
+title: [The title of your site]
+description: [A short description of your site's purpose]
