--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,7 @@ plugins:
 
 title: [For the Revolution]
 description: [be a human.]
+
+social:
+    github: jia9iZhang
+    mail: zjq17060212119@163.com
