--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [For the Revolution]
-description: [be a human.]
+title: Jiaqi's bolg
+description: 最令人鼓舞的事情莫过于，人类通过有意识的努力来提升自己的生活能力；而这种能力毋庸置疑。---亨利·戴维·梭罗
 
 social:
     github: jia9iZhang
