--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # theme: minimal
 # remote_theme: minimal
+encoding: utf-8
 
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
@@ -7,10 +8,18 @@ plugins:
 
 title: Jiaqi's bolg
 description: 最令人鼓舞的事情莫过于，人类通过有意识的努力来提升自己的生活能力；而这种能力毋庸置疑。---亨利·戴维·梭罗
+
 author:
     name: Jiaqi.zhang
     email: "zjq17060212119@163.com"
-
-markdown: kramdown
-
+#markdown配置：kramdown CommonMark
+markdown: commonmark
+# 时区
+timezone: Asia/Shanghai
 show_excerpts: true
+
+nav:
+    - name: Home
+      link: /
+    - name: About
+      link: /about.html
