--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,60 @@
-# theme: minimal
-# remote_theme: minimal
 encoding: utf-8
 
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+# SEO相关信息
+title: Jiaqi's Blog
+description: Jiaqi的个人博客
+keywords: Jiaqi,Blog,摄影,胶片,Java
+author: Jiaqi.zhang
+#footerText: 'Copyright © 2016 皖ICP备16016174号'
 
-title: Jiaqi's bolg
-description: 最令人鼓舞的事情莫过于，人类通过有意识的努力来提升自己的生活能力；而这种能力毋庸置疑。---亨利·戴维·梭罗
+# 这些不要动
+permalink: /posts/:year/:month/:day/:title.html
+kramdown:
+  auto_ids: true
+  input: GFM
+  syntax_highlighter: rouge
+exclude: ['CNAME', 'README.md', 'LICENSE', '_site', 'dist', 'Gemfile', 'Gemfile.lock', 'blog.sh']
 
-author:
-    name: Jiaqi.zhang
-    email: "zjq17060212119@163.com"
-#markdown配置：kramdown CommonMark
-markdown: commonmark
-# 时区
-timezone: Asia/Shanghai
-show_excerpts: true
+# 域名配置
+# baseurl配置,如果网站部署在根目录下的其他目录中，请设置为 /目录名
+#domainUrl: 'https://blog.tmaize.net'
+baseurl: ''
 
-nav:
-    - name: Home
-      link: /
-    - name: About
-      link: /about.html
+# 吐个槽地址，会在chat页面中重定向到该地址
+#tucaoUrl: https://support.qq.com/product/86335
+
+# 菜单
+# 必填字段 title: '文本' url: '链接'
+# 可选字段 target: '_blank' 新页面打开 
+menu:
+  - title: 首页
+    url: /
+  - title: 归类
+    url: /pages/categories.html
+  - title: 搜索
+    url: /pages/search.html
+#  - title: 友链
+#    url: /pages/links.html
+#  - title: 留言
+#    url: /pages/chat.html
+  - title: 关于
+    url: /pages/about.html
+
+# 点击页面文字冒出特效,不需要请设置为false
+extClickEffect: false
+
+# Google Adsense,不需要请设置为false
+# _includes/ext-adsense.html 里面修改为自己的配置
+extAdsense: false
+
+# 数学公式支持，比较影响加载速度,不需要请设置为false
+extMath: false
+
+# 显示访问量统计，由不蒜子提供服务
+extCount: false
+
+# 友情链接
+#links:
+#  - title: 文科中的技术宅
+#    url: https://www.townwang.com
+
