feat(*): 更换主题配置

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Jiaqi's Blog
 description: Jiaqi的个人博客
 keywords: Jiaqi,Blog,摄影,胶片,Java
 author: Jiaqi.zhang
-#footerText: 'Copyright © 2016 皖ICP备16016174号'
+footerText: 'Copyright © 2022'
 
 # 这些不要动
 permalink: /posts/:year/:month/:day/:title.html
